--- a/style.css
+++ b/style.css
@@ -4,8 +4,40 @@
     margin: 0;
     padding: 0;
 }
+/* DEBUG */
+.debug, .container-row{
+    background-color: #FF6900;
+    color: white;
+}
+
+.debug .link{
+    color: white;
+}
+
+.debug body{
+    max-width: 1200px;
+}
+
 /* TYPOGRAPHY */
+*{
+font-family: 'Roboto', sans-serif;
+
+}
 /* COMMON */
 /* HEADER */
+.container-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 70px;
+    padding: 30px 0px;
+    vertical-align: middle;
+}
+
+#logo{
+    width: 100px;
+}
+
 /* MAIN */
+
 /* FOOTER */
